fixed js not showing open submenu, and IE list-style-type bug

--- a/css/mnav-theme.css
+++ b/css/mnav-theme.css
@@ -6,7 +6,7 @@
     background-color: #ddd;
 }
 
-.mnav-theme .mnav-submenu-item {
+.mnav-theme .mnav-submenu {
     background-color: #ccc;
 }
 
